--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -7,8 +7,6 @@
     <title>SimpleLightbox library</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="dist/simple-lightbox.min.js" />
-    <link rel="stylesheet" href="dist/simple-lightbox.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.3/simple-lightbox.min.css"
@@ -16,6 +14,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="simplelightbox/dist/simple-lightbox.min.css" />
+    <link rel="stylesheet" href="simplelightbox/dist/simple-lightbox.min.js" />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
